# pique

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  TODO.md
docs/: DOMAIN.md  README.md
docs/decisions/: 001-agent-ready-documentation.md  002-event-loop-compatibility.md  003-testing-fuzzing-valgrind.md  004-dialectic-client-server-testing.md  006-core-library-as-plumbing-pdu-stack.md  007-documentation-and-manpage-updates.md  008-c-only-examples-and-codebase.md  009-consistent-protocol-interfaces.md  010-c-interfaces-and-language-bindings.md  011-nefarious-mitm-adversarial-testing.md  012-extended-event-loop-and-real-time-compatibility.md  013-embedded-lua-scripting-for-policy-and-automation.md
examples/: LICENSE  coroutine_pqwire.c  espidf_pqwire.c  rtos_pqwire.c
fuzz/: build_fuzzer.sh  fuzz_mitm.c  fuzz_pqwire.c
include/: mitm.h  pqwire.h  protocol_events.h  scram.h
src/: mitm.c  pqwire.c  scram.c
tests/: test_auth.c  test_input_robustness.c  test_mitm_basic.c  test_pipeline_recover.c  test_pqwire.c
